--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,8 @@
 {
-  "plugins": ["prettier-plugin-tailwindcss"],
-  "tabWidth": 2,
-  "semi": true,
-  "singleQuote": false,
-  "trailingComma": "es5",
+  "jsxSingleQuote": true,
   "printWidth": 160,
-  "arrowParens": "avoid",
-  "endOfLine": "auto"
+  "semi": false,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
